Додати задаци са других вежби.

--- a/вежбе/вежбе02.md
+++ b/вежбе/вежбе02.md
@@ -1,54 +1,67 @@
 # Основи програмирања: вежбе - II недеља
 
 ## Задатак 1
-Напиши функцију који враћа збир цифара четвороцифреног броја.
+Написати функцију који враћа збир цифара троцифреног броја.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење</summary>
 
 ```python
-def zbir_cifara_cetvorocifrenog_broja(x):
-    """
-    Напиши функцију који враћа збир цифара четвороцифреног броја.
-    """
+def zbir_cifara_trocifrenog_broja(x):
     cifra_jedinica = x % 10
     cifra_desetica = (x//10) % 10
     cifra_stotina = (x//100) % 10
-    cifra_hiljada = (x//1000) % 10
 
-    zbir = cifra_jedinica + cifra_desetica + cifra_stotina + cifra_hiljada
+    zbir = cifra_jedinica + cifra_desetica + cifra_stotina
 
     return zbir
+
+#while True:
+x = int(input())
+print(zbir_cifara_trocifrenog_broja(x))
 ```
 
 </details>
 
 ## Задатак 2
-Напиши функцију који исписује дужину дужи за унете кординате тачака.
+Написати функцију којом се четвороцифрени број учитава са стандардног улаза, а која враћа збир његових цифара.
+<details markdown='block'>
+<summary>Решење - извлачење делова ниске индексирањем</summary>
+
+```python
+def zbir_cifara():
+    print("Unesi četvorocifreni broj:")
+    x = input().strip()
+    j = int(x[-1])
+    d = int(x[-2])
+    s = int(x[-3])
+    h = int(x[-4])
+    
+    return j+d+s+h
+```
+
+</details>
+
+## Задатак 3
+Написати функцију који исписује дужину дужи за унете кординате тачака.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
 import math
 def duzina_duzi():
-    """
-    Напиши функцију који исписује дужину дужи за унете кординате тачака.
-    """
     x1,y1,x2,y2 = map(int, input().split())
     return math.sqrt( math.pow( x1-x2 , 2) + math.pow( y1-y2, 2))
 ```
 
 </details>
 
-## Задатак 3
-Напиши функцију који враћа унети број, али са избаченом цифром стотина.
+## Задатак 4
+Написати функцију који враћа унети број, али са избаченом цифром стотина.
 <details markdown='block'>
-<summary>Решење преко оператора </summary>
+<summary>Решење - коришћење оператора </summary>
 
 ```python
 def izbaciti_cifru_stotina():
-    """
-    Напиши функцију који враћа унети број, али са избаченом цифром стотина.
-    """
     n = int(input())
     prefiks = n // 1000
     sufiks = n % 100
@@ -57,29 +70,23 @@ def izbaciti_cifru_stotina():
 ```
 </details>
 <details markdown='block'>
-<summary>Решење преко одсецања ниске </summary>
+<summary>Решење - извлачење делова ниске одсецањем </summary>
 
 ```python
 def izbaciti_cifru_stotina():
-    """
-    Напиши функцију који враћа унети број, али са избаченом цифром стотина.
-    """
     n = input()
     return n[:-3] + n[-2:]
 
 ```
 </details>
 
-## Задатак 4
-Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
+## Задатак 5
+Написати програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
 <details markdown='block'>
-<summary>Решење преко оператора </summary>
+<summary>Решење - коришћење оператора </summary>
 
 ```python
 def obrni_cifre():
-    """
-    Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
-    """
     n = int(input())
 
     prefiks = n//10000
@@ -95,29 +102,23 @@ def obrni_cifre():
 </details>
 
 <details markdown='block'>
-<summary>Решење преко одсецања ниске</summary>
+<summary>Решење - извлачење делова ниске одсецањем</summary>
 
 ```python
 def obrni_cifre():
-    """
-    Напиши програм који на стандардни излаз исписује број који се добија када се обрне редослед последње 4 цифре броја n.
-    """
     n = input()
     print(n[:-4] + n[:-5:-1])
 
 ```
 </details>
 
-## Задатак 5
-Напиши функцију која за унете дужине страница троугла, проверава да и такав троугао постоји.
+## Задатак 6
+Написати функцију која за унете дужине страница троугла проверава да ли такав троугао постоји.
 <details markdown='block'>
 <summary>Решење </summary>
     
 ```python
 def trougao():
-    """
-    Напиши функцију која за унете дужине страница троугла, проверава да и такав троугао постоји.
-    """
     a,b,c = map(float, input().split())
 
     if a < b + c and b < a + c and c < a + b:
@@ -128,16 +129,51 @@ def trougao():
 ```
 </details>
 
-## Задатак 6
-Напиши функцију која за за унети број проверава дељивост са 2 и са 3.
+## Задатак 7
+Написати функцију која обавештава корисника о томе да ли је унети број паран или непаран.
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+def provera_parnosti():
+    print("Unesi ceo broj.")
+    x = int(input())
+    
+    if x%2==0:
+        print("Uneti broj je paran.")
+    else:
+        print("Uneti broj je neparan.")
+
+```
+</details>
+
+## Задатак 8
+Написати функцију која за за унето x проверава дељивост са 3.
+<details markdown='block'>
+<summary>Решење </summary>
+    
+```python
+def deljivost(x):
+    if x % 3 == 0:
+        print("Broj {} je deljiv sa 3.".format(x))
+    else:
+        print("Broj {} nije je deljiv sa 3.".format(x))
+
+
+#while True:
+x=int(input())
+deljivost(x)
+
+```
+</details>
+
+## Задатак 9
+Написати функцију која за за унети број проверава дељивост са 2 и са 3.
 <details markdown='block'>
 <summary>Решење </summary>
  
 ```python
 def deljivost(x):
-    """
-    Напиши функцију која за за унето x проверава дељивост са 2 и са 3.
-    """
     if x % 2 == 0 and x % 3 == 0:
         print("Broj {} je deljiv sa 2 i sa 3.".format(x))
     elif x % 2 == 0:
@@ -149,16 +185,30 @@ def deljivost(x):
 ```
 </details>
 
-## Задатак 7
-Напиши програм која за унети целобројни број враћа збир његових цифара.
+<details markdown='block'>
+<summary>Решење - угнеждено гранање</summary>
+ 
+```python
+def provera_deljivosti(x):
+    if x%2==0:
+        if x%3==0:
+            print("Broj je deljiv i sa 2 i sa 3.")
+        else:
+            print("Broj je deljiv samo sa 2.")
+    elif x%3==0:
+        print("Broj je deljiv samo sa 3.")
+    else:
+        print("Broj nije deljiv ni sa 2 ni sa 3.")
+```
+</details>
+
+## Задатак 10
+Написати програм који за унети целобројни број враћа збир његових цифара.
 <details markdown='block'>
 <summary>Решење </summary>
     
 ```python
 def zbir_cifara_celobrojnog_broja(n):
-    """
-    Напиши програм која за унети целобројни број враћа збир његових цифара.
-    """
     n=abs(n)
     s=0
     while n>0:
@@ -166,30 +216,17 @@ def zbir_cifara_celobrojnog_broja(n):
         n=n//10
 
     return s
+
+#while True:
+n=int(input())
+print(zbir_cifara_celobrojnog_broja(n))
 ``` 
 </details>
 
-## Задатак 8
-Написати функцију који за унету ниску враћа ниску уназад.
+## Задатак 11
+Написати програм који за унету ниску враћа ниску уназад.
 <details markdown='block'>
-<summary>Решење преко for петље </summary>
-    
-```python
-def niska_unazad(niska):
-    """
-    Написати функцију који за унету ниску враћа ниску уназад.
-    """
-    niz = []
-    for i in range(len(niska)-1,-1,-1):
-        niz.append(niska[i])
-
-    return ''.join(niz)
-
- ```
-</details>
-    
-<details markdown='block'>
-<summary>Решење одсецањем ниске </summary>
+<summary>Решење - извлачење делова ниске одсецањем </summary>
     
 ```python
 def niska_unazad(niska):
@@ -197,10 +234,14 @@ def niska_unazad(niska):
     Написати функцију који за унету ниску враћа ниску уназад.
     """
     return niska[::-1]
+
+#while True:
+niska=input()
+print(niska+"   -   "+niska_unazad(niska))
  ```
 </details>
 
-## Задатак 9
+## Задатак 12
 Написати функцију која проверава да ли је унета ниска палиндром.
 <details markdown='block'>
 <summary>Решење позивањем преходне функције niska_unazad </summary>
@@ -216,7 +257,7 @@ def palindrom(niska):
 </details>
 
 <details markdown='block'>
-<summary>Решење одсецањем ниске</summary>
+<summary>Решење - извлачење делова ниске одсецањем</summary>
     
 ```python
 def palindrom(niska):
@@ -226,6 +267,118 @@ def palindrom(niska):
     return niska == niska[::-1]
 ```
 </details>
+
+## Задатак 13
+Написати функцију која реч "тачно" преводи у објекат True, реч "нетачно" у објекат False, док за сваки други унос обавештава корисника да такав унос није валидан.
+<details markdown='block'>
+<summary>Решење</summary>
+    
+```python
+def prevodilac():
+    print("Unesite željenu reč.")
+    unos = input().strip()
+    if unos.lower() == "tačno" or unos.lower() == "tacno" or unos.lower() == "тачно":
+        return True
+    elif unos.lower() == "netačno" or unos.lower() == "netacno" or unos.lower() == "нетачно":
+        return False
+    else:
+        print("Unos nije validan.")
+ ```
+</details>
+
+
+## Задатак 14
+Написати програм који исписује оцену на основу освојених поена.
+<details markdown='block'>
+<summary>Решење</summary>
+    
+```python
+def ocena(x):
+    #Креирамо функцију која исписује оцену на основу освојених поена.
+    if x>=91:
+        return(10)
+    elif x>=81:
+        return(9)
+    elif x>=71:
+        return(8)
+    elif x>=61:
+        return(7)
+    elif x>=51:
+        return(6)
+    else:
+        return(5)
+    
+
+#while True:
+x=int(input())
+print(ocena(x))
+ ```
+</details>
+
+## Задатак 15
+Написати функцију која израчунава квадрат задатог целог броjа понављањем сабирања.
+<details markdown='block'>
+<summary>Решење</summary>
+    
+```python
+def kvadrat(x):
+    odgovor = 0
+    ponavljanja = abs(int(x))
+    
+    while ponavljanja > 0:
+        #odgovor = odgovor + abs(x)
+        odgovor += abs(x)
+        ponavljanja = ponavljanja - 1
+        #ponavljanja -= 1
+    
+    return odgovor
+ ```
+</details>
+
+## Задатак 16
+Написати програм који рачуна факторијел унетог броја.
+<details markdown='block'>
+<summary>Решење</summary>
+    
+```python
+def faktorijel(x):
+    #Креирамо функцију која рачуна факторијел унетог броја.
+    proizvod=1
+    while x>=2: #1
+        proizvod=proizvod*x
+        x-=1
+    return(proizvod)
+
+#while True:
+x=int(input())
+print(faktorijel(x))
+ ```
+</details>
+
+## Задатак 17
+Написати функцију која одређује најмању цифру која се користи при записивању произвољног целог броја, учитаног са стандардног улаза.
+<details markdown='block'>
+<summary>Решење</summary>
+    
+```python
+def najmanja_cifra():
+    x = input("Unesi ceo broj: \n").strip()
+    broj_cifara = len(x)
+    
+    odgovor = "9"
+    
+    while broj_cifara > 0:
+        if x[broj_cifara-1] < odgovor:
+            odgovor = x[broj_cifara-1]
+        broj_cifara -= 1
+        #broj_cifara = broj_cifara - 1
+            
+    return int(odgovor)
+ ```
+</details>
+
+
+
  
 
 
