Ажурирани задаци са трећих вежби.

--- a/вежбе/вежбе03.md
+++ b/вежбе/вежбе03.md
@@ -1,15 +1,12 @@
 # Основи програмирања: вежбе - III недеља
 
 ## Задатак 1
-Написати функцију која за унети низ, враћа суму парних цифара у низу.
+Написати функцију која, за унети низ, враћа суму парних цифара у низу.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
 def suma_parnih(niz):
-    """
-    Написати функцију која за унети низ, враћа суму парних цифара у низу.
-    """
     suma = 0
     for broj in niz:
         if broj % 2 ==0:
@@ -22,15 +19,12 @@ def suma_parnih(niz):
 </details>
 
 ## Задатак 2
-Написати функцију која за унети низ, враћа низ парних цифара.
+Написати функцију која, за унети низ, враћа низ парних цифара.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - верзија 1</summary>
 
 ```python
 def niz_parnih(niz):
-    """
-    Написати функцију која за унети низ, враћа низ парних цифара.
-    """
     niz_parnih = []
     for broj in niz:
         if broj % 2 ==0:
@@ -42,16 +36,32 @@ def niz_parnih(niz):
 
 </details>
 
+<details markdown='block'>
+<summary>Решење - верзија 2</summary>
+
+```python
+def npc():
+    x=int(input())
+    niz=[]
+    while x>0:
+        if (x%10) % 2 == 0:
+            niz.append(x%10)
+        #if len(niz) == 3:
+            #break
+        x=x//10;
+    print(niz)
+
+npc()
+```
+</details>
+
 ## Задатак 3
-Написати функцију која за унети низ, враћа члан низа са највећом вредношћу.
+Написати функцију која, за унети низ, враћа члан низа са највећом вредношћу.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
 def maksimum1(niz):
-    """
-    Написати функцију која за унети низ, враћа члан низа са највећом вредношћу.
-    """
     najveci = niz[0]
     for broj in niz:
         if broj > najveci:
@@ -63,15 +73,31 @@ def maksimum1(niz):
 </details>
 
 ## Задатак 4
-Написати функцију која за унети број н, враћа збир свих природних бројева од 1 до н.
+Написати функцију која, за унети низ, враћа члан низа са најмањом вредношћу.
 <details markdown='block'>
-<summary>Решење преко for петље</summary>
+<summary>Решење</summary>
+
+```python
+def minimum(niz):
+    najmanji = niz[0]
+    for broj in niz:
+        if broj < najmanji:
+            najmanji = broj
+
+    print(najmanji)
+ 
+x=list(map(int,input().split()))
+minimum(x)
+```
+</details>
+
+## Задатак 5
+Написати функцију која, за унети број н, враћа збир свих природних бројева од 1 до н.
+<details markdown='block'>
+<summary>Решење - коришћење for петље</summary>
 
 ```python
 def zbir(n):
-    """
-    Написати функцију која за унети број н, враћа збир цифара свих природних бројева од 1 до н.
-    """
     suma = 0
     for broj in range(1,n+1):
         suma += broj
@@ -81,13 +107,10 @@ def zbir(n):
 ```
 </details>
 <details markdown='block'>
-<summary>Решење преко while петље </summary>
+<summary>Решење - коришћење while петље </summary>
 
 ```python
 def zbir(n):
-    """
-    Написати функцију која за унети број н, враћа збир цифара свих природних бројева од 1 до н.
-    """
     suma = 0
     broj = 1
     while broj < n+1:
@@ -98,28 +121,22 @@ def zbir(n):
 ```
 </details>
 <details markdown='block'>
-<summary>Решење преко формуле </summary>
+<summary>Решење - коришћење формуле </summary>
 
 ```python
 def zbir3(n):
-    """
-    Написати функцију која за унети број н, враћа збир цифара свих природних бројева од 1 до н.
-    """
     return n*(n+1)//2
 
 ```
 </details>
 
-## Задатак 5
-Написати функцију која за унети број н, враћа факторијел броја н.
+## Задатак 6
+Написати функцију која, за унети број н, враћа факторијел броја н.
 <details markdown='block'>
-<summary>Решење преко for петље</summary>
+<summary>Решење - коришћење for петље</summary>
 
 ```python
 def faktorijel(n):
-    """
-    Написати функцију која за унети број н, враћа факторијел броја н.
-    """
     proizvod = 1
     for broj in range(1,n+1):
         proizvod *= broj
@@ -129,13 +146,10 @@ def faktorijel(n):
 ```
 </details>
 <details markdown='block'>
-<summary>Решење преко while петље </summary>
+<summary>Решење - коришћење while петље </summary>
 
 ```python
 def faktorijel(n):
-    """
-    Написати функцију која за унети број н, враћа факторијел броја н.
-    """
     proizvod = 1
     broj = 1 
     while broj < n+1:
@@ -146,16 +160,13 @@ def faktorijel(n):
 ```
 </details>
 
-## Задатак 6
-Написати функцију којим се проверава да ли је дати природан број k дељив свим природним бројевима од 1 до n.
+## Задатак 7
+Написати функцију којом се проверава да ли је дати природан број k дељив свим природним бројевима од 1 до n.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
 def deljivOd1Don(k, n):
-    """
-    Написати функцију којим се проверава да ли је дати природан број k дељив свим природним бројевима од 1 до n.
-    """
     for d in range(1, n+1): 
         if k % d != 0:
             return False
@@ -164,7 +175,40 @@ def deljivOd1Don(k, n):
 ```
 </details>
 
+## Задатак 8
+Написати функцију која, за унету реч, враћа број сугласника написаних великим словом. 
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def suglasnici():
+    rec=input()
+    brojac=0
+    for slovo in rec:
+        if slovo not in ("a","e","i","o","u") and slovo.isupper():
+            brojac+=1
+    print(brojac)
+
+suglasnici()
+```
+</details>
+
+## Задатак 9
+Написати функцију која исписује најмањи заједнички садржалац два броја.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def nzs(x,y):
+    for i in range(max(x,y),x*y+1,max(x,y)): #1,x*y+1,1
+        if i%x==0 and i%y==0:
+            print(i)
+            break
 
 
+x, y = map(int,input().split())
+nzs(x,y)
+```
+</details>
 
 
