Додати задаци са четвртих вежби.

--- a/вежбе/вежбе04.md
+++ b/вежбе/вежбе04.md
@@ -1,15 +1,12 @@
 # Основи програмирања: вежбе - IV недеља
 
 ## Задатак 1
-Написати функцију која за унети низ, враћа индекс на којем је минимални члан.
+Написати функцију која, за унети низ, враћа индекс на којем је минимални члан.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
 def indeks_minimuma(niz):
-    """
-    Написати функцију која за унети низ, враћа индекс на којем је минимални члан.
-    """
     mininum = niz[0]
     indeks = 0
     for i in range(1,len(niz)):
@@ -20,19 +17,38 @@ def indeks_minimuma(niz):
     return indeks
 
 ```
-
 </details>
 
 ## Задатак 2
+Написати функцију која, за унети низ, враћа индекс на којем је максимални члан.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def indeks_maksimuma(niz):
+    maksimum = niz[0]
+    indeks = 0
+    for i in range(1,len(niz)):
+        if niz[i] > maksimum:
+            maksimum = niz[i]
+            indeks = i
+    
+    return indeks
+
+niz=list(map(int,input().split()))
+print(indeks_maksimuma(niz))
+
+```
+
+</details>
+
+## Задатак 3
 Написати функцију која враћа број из низа који је најближи броју x.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
 def najblizi(niz,x):
-    """
-    Написати функцију која враћа број из низа који је најближи броју x.
-    """
     najblizi_broj = niz[0]
     for broj in niz:
         if abs(broj-x) < abs(najblizi_broj-x):
@@ -43,16 +59,13 @@ def najblizi(niz,x):
 ```
 </details>
 
-## Задатак 3
-Написати функцију која за унети стринг с, проверава да ли је стринг палиндром.
+## Задатак 4
+Написати функцију која, за унети стринг с, проверава да ли је стринг палиндром.
 <details markdown='block'>
-<summary>Решење преко for петље </summary>
+<summary>Решење - коришћење for петље </summary>
 
 ```python
 def palindrom(s):
-    """
-    Написати функцију која за унети стринг с, проверава да ли је стринг палиндром.
-    """
     n = len(s)
     for i in range(n//2):
         if s[i] != s[n-1-i]:
@@ -62,17 +75,166 @@ def palindrom(s):
 ```
 </details>
 
-## Задатак 4
-Написати функцију која за унету ниску проверава да ли се састоји само од јединствених карактера.
+## Задатак 5
+Написати програм који за једно учитано слово исписује његов велики или мали пандан, у зависности од тога да ли је унето слово велико или мало.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење без дефинисања функције</summary>
 
 ```python
-def jedinstveni(niska):
-    """
-    Написати функцију која за унету ниску проверава да ли се састоји само од јединствених карактера.
-    """
-    return len(niska) == len(set(niska))
+slovo = input("Unesite slovo: ").strip()
+if slovo.isupper():
+    print(slovo.lower())
+else:
+    print(slovo.upper())
     
 ```
 </details>
+
+<details markdown='block'>
+<summary>Решење са дефинисањем функције</summary>
+
+```python
+def pandan_slova():
+    slovo = input("Unesite slovo: ").strip()
+    if slovo.isupper():
+        #print(slovo.lower())
+        return slovo.lower()
+    else:
+        #print(slovo.upper())
+        return slovo.upper()
+       
+print(pandan_slova())    
+```
+</details>
+
+## Задатак 6
+Написати програм коjи, за унету годину, проверава да ли jе преступна.
+Годину сматрамо преступном уколико jе дељива са 400, или jе дељива са 4, а ниjе дељива са 100.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+def prestupna(godina):
+    if godina % 400 == 0 or (godina % 4 == 0 and godina % 100 != 0):
+        print("DA")
+    else:
+        print("NE")
+
+godina=int(input())
+prestupna(godina)   
+```
+</details>
+
+
+## Задатак 7
+Написати програм који одређује остатак при дељењу броја А бројем Б без коришћења оператора /, // и %. Подразумевати да важи: А $\ge$ 0 и Б $>$ 0.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+def ostatak(a,b):
+    while a-b>=0:
+        a=a-b
+    return a
+
+(a,b) = map(int, input().split())
+print(ostatak(a, b))  
+```
+</details>
+
+## Задатак 8
+Написати функцију која проналази највећи заједнички делилац два цела броја.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+def nzd(a, b):
+    domen = min(abs(a), abs(b))
+    rezultat = 1
+    for i in range(1, domen+1):
+        if a%i==0 and b%i==0:
+            rezultat = i
+    
+    return rezultat
+
+#print(nzd(-2, 4))
+#print(nzd(2, 3))
+#print(nzd(15, 36))  
+```
+</details>
+
+## Задатак 9
+Написати програм коjи над унетим низом A извршава K десних ротациjа.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+def rotacija(niz,k):
+    indeksi= [i for i in range(len(niz))]
+    niz = niz[-k:]+niz[:-k]
+    indeksi=indeksi[-k:]+indeksi[:-k]
+    for i in range(len(niz)):
+        print("clan {} je sada na poziciji {}; a inicijalno je bio na poziciji {}.\n".format(niz[i],i,indeksi[i]))
+
+niz=list(map(int,input().split()))
+k=int(input())
+rotacija(niz,k)  
+```
+</details>
+
+## Задатак 10
+Петља група - Збирка задатака: задатак [(F) Зрцални](https://arena.petlja.org/competition/zbirka#tab_134867)
+<details markdown='block'>
+<summary>Решење - први начин</summary>
+
+```python
+n = input()
+if n!='0' and (n[-1] == '0' or any(map(lambda x: x not in "08", n))):
+    print("NE")
+else:
+    print("DA")
+
+```
+</details>
+<details markdown='block'>
+<summary>Решење - други начин</summary>
+
+```python
+def zrcalni(n):
+    zrcalne_cifre = ["0", "8"]
+    odgovor = "DA"
+    for i in range(len(n)):
+        if n[i] not in zrcalne_cifre:
+            odgovor = "NE"
+    if n[-1] == "0" and n!="0":
+        odgovor = "NE"
+    
+    return odgovor
+
+n = input()
+resenje = zrcalni(n)
+print(resenje)
+```
+</details>
+
+## Задатак 11
+Петља група - Збирка задатака: задатак [(Ј) Спојлер](https://arena.petlja.org/competition/zbirka#tab_134951)
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+a, b = map(int, input().split())
+x, y = map(int, input().split())
+
+if x == a and y == b:
+    print('nijedan')
+if x < a and y < b:
+    print('?')
+if x < a and y == b:
+    print('prvi')
+if x == a and y < b:
+    print('drugi')
+
+```
+</details>
+
