Допуњени задаци са петих вежби.

--- a/вежбе/вежбе05.md
+++ b/вежбе/вежбе05.md
@@ -6,10 +6,7 @@
 <summary>Решење </summary>
 
 ```python
-def ponovljeni(niska):
-    """
-    Написати функцију која за унету ниску, враћа карактерe који се понављају.
-    """        
+def ponovljeni(niska):       
     skup = set()
     skup_ponovljenih = set()
     for karakter in niska:
@@ -18,16 +15,14 @@ def ponovljeni(niska):
         else:
             skup.add(karakter)
 
-    return skup_ponovljenih
-
-    
+    return skup_ponovljenih   
 ```
 </details>
 
 ## Задатак 2
 Написати функцију која за унети низ, враћа број појављивања максималног члана.
 <details markdown='block'>
-<summary>Решење преко for петље </summary>
+<summary>Решење - коришћење for петље </summary>
 
 ```python
 def broj_maksimalnih(niz):
@@ -45,26 +40,102 @@ def broj_maksimalnih(niz):
             brojac+=1
 
     return brojac
+
+niz=list(map(int,input().split()))
+print(broj_maksimalnih(niz))
 ```
 </details>
 <details markdown='block'>
-<summary>Решење преко count функције </summary>
+<summary>Решење - коришћење уграђене функције count </summary>
 
 ```python
 def broj_maksimalnih1(niz):
-    """
-    Написати функцију која за унети низ, враћа број појављивања максималног члана.
-    """
     return niz.count(max(niz))
 
+niz=list(map(int,input().split()))
+print(broj_maksimalnih(niz))
 ```
 </details>
 
+
 ## Задатак 3
+Написати функцију која за унети низ, враћа број појављивања минималног члана.
+<details markdown='block'>
+<summary>Решење - коришћење for петље </summary>
+
+```python
+def broj_minimalnih(niz):
+    minimalan = niz[0]
+    for broj in niz:
+        if broj < minimalan:
+            minimalan = broj
+    
+    brojac = 0
+    for broj in niz:
+        if broj == minimalan:
+            brojac+=1
+
+    print(brojac)
+
+niz=list(map(int,input().split()))
+broj_minimalnih(niz)
+```
+</details>
+<details markdown='block'>
+<summary>Решење - коришћење уграђене функције count</summary>
+
+```python
+def broj_minimalnih1(niz):
+    return niz.count(min(niz))
+
+niz=list(map(int,input().split()))
+print(broj_minimalnih1(niz))
+```
+</details>
+
+
+## Задатак 4
+Написати програм коjи проналази аритметичку средину свих делилаца броjа. Имати у виду да 1 дели сваки броj, као и да jе сваки броj дељив са самим собом.
+<details markdown='block'>
+<summary>Решење - први начин </summary>
+
+```python
+def a_s_d(n):
+    suma=0
+    brojac=0
+    for i in range(1,n+1):
+        if n%i == 0:
+            suma+=i
+            brojac+=1
+    print(suma/brojac)
+    
+n=int(input())
+a_s_d(n)    
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - други начин </summary>
+
+```python
+def a_s_d(n):
+    delioci = []
+    for i in range(1,n+1):
+        if n%i == 0:
+            delioci.append(i)
+    print(sum(delioci)/len(delioci))
+
+n=int(input())
+a_s_d(n)  
+```
+</details>
+
+
+## Задатак 5
 Написати функцију која проверава да ли је унети број Армстронгов број.
 Број је Армстронгов број, ако је то к-цифрен број, и једнак је суми к-тих степена својих цифара.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - коришћење while петље</summary>
 
 ```python
 def armstrongov_broj():
@@ -87,32 +158,53 @@ def armstrongov_broj():
         broj=broj//10
 
     return zbir == int(broj_niska)
-    
+
+print(armstrongov_broj())    
 ```
 </details>
 
-## Задатак 4
-Написати функцију који одређује колико бројева у низу не садрже цифру 5.
+<details markdown='block'>
+<summary>Решење - коришћење for петље</summary>
+
+```python
+def armstrongov_broj():
+    broj_niska = input()
+    broj_cifara = len(broj_niska)
+    broj = int(broj_niska)
+
+    zbir = 0
+    for i in broj_niska:
+        zbir+= int(i)**broj_cifara
+
+    return zbir == broj
+    
+print(armstrongov_broj())    
+```
+</details>
+
+
+## Задатак 6
+Написати програм коjи у задатом низу проналази елемент коjи се наjвише пута поjављуjе. 
+Вратити елемент, као и његов одговараjући броj понављања.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def brojevi_koji_ne_sadrze_5(niz):
-    """
-    Написати функцију који одређује колико бројева у низу не садрже цифру 5.
-    """
-    brojac = 0
-    for broj in niz:
-        broj_niska = str(broj)
-        if '5' not in broj_niska:
-            brojac+=1
-
-    return brojac
-
+niz=list(map(int,input().split()))
+skup=set(niz)
+print(max(skup,key=lambda x: niz.count(x)))
+maximum=0
+clan=niz[0]
+for i in skup:
+    if (niz.count(i) > maximum) or (niz.count(i) == maximum and i > clan):
+        clan = i
+        maximum = niz.count(i)
+print(clan)
 ```
 </details>
 
-## Задатак 5
+
+## Задатак 7
 Написати функцију која враћа максималну разлику суседних бројева у низу.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -133,11 +225,33 @@ def maksimalna_razlika_susednih(niz):
             maksimalna_razlika = trenutna_razlika
         
     return maksimalna_razlika
-
 ```
 </details>
 
-## Задатак 6
+
+## Задатак 8
+Написати функцију који одређује колико бројева у низу не садрже цифру 5.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def brojevi_koji_ne_sadrze_5(niz):
+    """
+    Написати функцију који одређује колико бројева у низу не садрже цифру 5.
+    """
+    brojac = 0
+    for broj in niz:
+        broj_niska = str(broj)
+        if '5' not in broj_niska:
+            brojac+=1
+
+    return brojac
+```
+</details>
+
+
+
+## Задатак 9
 Написати функцију која враћа два броја у низу која у збиру дају циљану вредност.
 У случају да не постоје, вратити -1.
 <details markdown='block'>
@@ -160,7 +274,8 @@ def zbir_dva(niz, cilj):
 ```
 </details>
 
-## Задатак 7
+
+## Задатак 10
 Написати функцију која за уласку ниску враћа најкраћу и најдужу реч.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -181,8 +296,56 @@ def naj_reci(niska):
         else:
             samo_reci += ' '
     return min(samo_reci.split(), key=len), max(samo_reci.split(), key=len)
+```
+</details>
 
+## Задатак 11
+Написати функцију која за унету ниску проверава да ли се састоји само од јединствених карактера.
+<details markdown='block'>
+<summary>Решење </summary>
 
+```python
+def jedinstveni(niska):
+    return len(niska) == len(set(niska))
+
+print(jedinstveni("ivan1233"))
+```
+</details>
+
+## Задатак 12
+Петља група - Збирка задатака: задатак [(L) Три тајна броја](https://arena.petlja.org/competition/zbirka#tab_134871)
+<details markdown='block'>
+<summary>Решење - први начин</summary>
+
+```python
+niz = list(map(int,input().split()))
+niz.sort()
+x=niz[0]
+y=niz[1]
+z=niz[-1]-x-y
+print(x,y,z)
+```
+</details>
+<details markdown='block'>
+<summary>Решење - други начин</summary>
+
+```python
+brojevi = list(sorted(map(int,input().split())))
+x,y = brojevi[0],brojevi[1]
+z = brojevi[-1]-x-y
+print(x,y,z)
+```
+</details>
+
+## Задатак 13
+Петља група - Збирка задатака: задатак [(N) Различити члан](https://arena.petlja.org/competition/zbirka#tab_133366)
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+niz1 = list(map(int, input().split()))
+niz2 = list(map(int, input().split()))
+print(abs(sum(niz1)-sum(niz2)))
 ```
 </details>
 
