--- a/вежбе/вежбе07.md
+++ b/вежбе/вежбе07.md
@@ -1,222 +1,271 @@
 # Основи програмирања: вежбе - VII недеља
 
 ## Задатак 1
-Написати функцију која враћа збир првих н бројева.
-Тражи се рекурзивно решење.
+ Написати функцију која за целобројну вредност секунде претвара у формат
+-сати:минути:секунди за негативне, односно сати:минути:секунди за ненегативне улазе
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def suma_do_n_rekurzivno(n):
+def pretvaranje_vremena(sekunde):
     """
-    Написати функцију која враћа збир првих н бројева.
-    Тражи се рекурзивно решење.
+    Написати функцију која за целобројну вредност секунде претвара у формат
+    -сати:минути:секунди за негативне, односно сати:минути:секунди за ненегативне улазе
+    Пример:
+    0 -> '0:0:0'
+    -34567 -> '-9:36:7'
+    100001 -> '27:46:41'
     """
-    if n == 1:
-        return 1
-
-    return n + suma_do_n_rekurzivno(n-1)
+    sati = abs(sekunde) // 3600
+    minuti = abs(sekunde) % 3600 // 60
+    sekundi = abs(sekunde) % 60
+    if sekunde < 0:
+        return '-' + str(sati) + ':' + str(minuti) + ':' + str(sekundi)
+    else:
+        return str(sati) + ':' + str(minuti) + ':' + str(sekundi)
+    
 ```
 </details>
 
 ## Задатак 2
-Написати функцију која враћа факторијел броја н.
-Тражи се рекурзивно решење.
+Написати функцију која враћа члан низа који фали.
+Низ је дужине н, и садржи бројеве у опсегу [0,н].
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def faktorijel_rekurzivno(n):
+def broj_koji_fali(niz):
     """
-    Написати функцију која враћа факторијел броја н.
-    Тражи се рекурзивно решење.
+    Написати функцију која враћа члан низа који фали.
+    Низ је дужине н, и садржи бројеве у опсегу [0,н].
+    Пример:
+    [3,0,1] -> 2
+    [9,6,4,2,3,5,7,0,1] -> 8
     """
-    if n ==1:
-        return 1
-
-    return n * faktorijel_rekurzivno(n-1)
+    n = len(niz)
+    return n*(n+1)//2 - sum(niz)
     
 ```
 </details>
 
 ## Задатак 3
-Написати функцију која враћа н-ти члан Фибоначијевог низа.
-Сваки члан Фибоначијевог низа се добија као збир претходна два његова члана.
-Почетни чланови низа су 0 и 1.
+Написати функцију која проверава да ли је редослед заграда ваљан.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def fibonaci(n):
+def zagrade(niska):
     """
-    Написати функцију која враћа н-ти члан Фибоначијевог низа.
-    Сваки члан Фибоначијевог низа се добија као збир претходна два његова члана.
-    Почетни чланови низа су 0 и 1.
+    Написати функцију која проверава да ли је редослед заграда ваљан.
+    Пример:
+    "(())" -> True
+    ")(" -> False
+    "()) -> False
     """
-    if n == 1:
-       return 0
-    if n == 2:
-        return 1
-    return fibonaci(n-1) + fibonaci(n-2)
+    brojac = 0
+    for karakter in niska:
+        if karakter == "(":
+            brojac += 1
+        if karakter == ")":
+            brojac -= 1
+        if brojac < 0:
+            return False
+
+    return brojac == 0
 ```
 </details>
 
 ## Задатак 4
-Написати функцију коjа враћа вредности из одређене врсте и колоне такозваног Паскаловог троугла.
-Сваки броj унутар Паскаловог троугла представља збир два броjа коjи се налазе изнад њега, док
-су краjњи броjеви увек jединице. Сматрати да врсте и колоне Паскаловог троугла почињу од jедан, а не од нула.
+Написати функцију која враћа максималан члан у низу који се појављује непаран број пута.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def paskalov_trougao(vrsta,kolona):
+def najveci_neparan_puta(niz):
     """
-    Написати функцију коjа враћа вредности из одређене врсте и колоне такозваног Паскаловог троугла.
-    Сваки броj унутар Паскаловог троугла представља збир два броjа коjи се налазе изнад њега, док
-    су краjњи броjеви увек jединице. Сматрати да врсте и колоне Паскаловог троугла почињу од jедан, а не од нула.
+    Написати функцију која враћа максималан члан у низу који се појављује непаран број пута.
+    Пример:
+    [5,10,23,10,23] -> 5
     """
-    if vrsta == kolona or kolona == 1:
-        return 1
-    
-    return paskalov_trougao(vrsta-1,kolona) + paskalov_trougao(vrsta-1,kolona-1)
-
+    skup_neparnih=set()
+    for clan in niz:
+        if niz.count(clan)%2 ==1:
+            skup_neparnih.add(clan)
+    if not skup_neparnih: return None
+    return max(skup_neparnih)
     
 ```
 </details>
 
 ## Задатак 5
-Написати рекурзивну функцију коjа врши изокретање ниске, односно ради исто што и ниска[::-1].
+Написати функцију која враћа име контакта који у свом броју има део броја који укуцамо.
+Уколико има више таквих контакта, вратити оног са најмањом алфабетском вредношћу.
+А уколико нема ни једног, врати "NO CONTACT".
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def izokretanje_niske(niska):
+def kontakti(imena, brojevi, deo_broja):
     """
-    Написати рекурзивну функцију коjа врши изокретање ниске, односно ради исто што и ниска[::-1].
+    Написати функцију која враћа име контакта који у свом броју има део броја који укуцамо.
+    Уколико има више таквих контакта, вратити оног са најмањом алфабетском вредношћу.
+    А уколико нема ни једног, врати "NO CONTACT".
+    Пример:
+    imena = ["Pera","Mika"]
+    brojevi = ["99999999", "777888999"]
+    deo_broja = "88999" -> "Mika"
     """
-    if niska == '':
-        return niska
+    res = []
+    for i in range(len(brojevi)):
+        if deo_broja in brojevi[i]:
+            res.append(imena[i])
 
-    return izokretanje_niske(niska[1:]) + niska[0]
+    if len(res) == 0:
+        return 'NO CONTACT'
+    res = sorted(res)
+    return res[0]
+    
 ```
 </details>
 
 ## Задатак 6
-Написати функцију која проверава да ли је ниска палиндром.
-Тражи се рекурзивно решење.
+Написати функцију која за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def palindrom(niska):
+def nedeljivi_brojevi(leva_granica,desna_granica):
     """
-    Написати функцију која проверава да ли је ниска палиндром.
-    Тражи се рекурзивно решење.
+    Написати функцију која за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
+    Пример:
+    11,22 -> [1,2,3,4,5,6,7,8,9,11,12,15,22]
+    47,85 -> [48,55,66,77]]
     """
-    if len(niska) == 0 or len(niska) == 1:
+    def deljiv(n):
+        for cifra in str(n):
+            if cifra == '0' or n % int(cifra) != 0:
+                return False
         return True
-    if niska[0] != niska[-1]:
-        return False
-    
-    return palindrom(niska[1:-1])
-    
-```
-</details>
 
-## Задатак 7
-Написати процедуру коjа прима позитивну целоброjну вредност n, а враћа укупан броj кругова коjи
-се налази унутар петоугаоног облика у n-тоj итерациjи.
-<details markdown='block'>
-<summary>Рекурзивно решење </summary>
-
-```python
-def petougaoni_broj_rekurzivno(n):
-    """
-    Написати процедуру коjа прима позитивну целоброjну вредност n, а враћа укупан броj кругова коjи
-се налази унутар петоугаоног облика у n-тоj итерациjи.
-    Тражи се рекурзивно решење.
-    """
-    if n ==1:
-        return 1
-    return 5*(n-1) + petougaoni_broj_rekurzivno(n-1)
-    
-```
-</details>
-
-<details markdown='block'>
-<summary>Итеративно решење </summary>
-
-```python
-def petougaoni_broj_iterativno(n):
-    """
-    Написати процедуру коjа прима позитивну целоброjну вредност n, а враћа укупан броj кругова коjи
-се налази унутар петоугаоног облика у n-тоj итерациjи
-    Тражи се итеративно решење.
-    """
-    broj_kuglica = 1
-    for i in range(1,n):
-        broj_kuglica += 5*i
-
-    return broj_kuglica
-    
-```
-</details>
-
-## Задатак 8
-Написати функцију која враћа број самогласникa у ниски.
-<details markdown='block'>
-<summary>Рекурзивно решење </summary>
-
-```python
-def izbroj_samoglasnike_rekurzivno(niska):
-    """
-    Написати функцију која враћа број самогласникa у ниски.
-    Тражи се рекурзивно решење.
-    """
-    if niska == '':
-        return 0
-    res = 1 if niska[0] in 'aeiou' else 0
-    return res + izbroj_samoglasnike_rekurzivno(niska[1:])
-
-    
-```
-</details>
-
-<details markdown='block'>
-<summary>Итеративно решење </summary>
-
-```python
-def izbroj_samoglasnike_iterativno(niska):
-    """
-    Написати функцију која враћа број самогласникa у ниски.
-    Тражи се итеративно решење.
-    """
-    res = 0
-    for char in niska:
-        res += 1 if char in 'aeiou' else 0
-
+    res = []
+    for n in range(leva_granica, desna_granica + 1):
+        if deljiv(n):
+            res.append(n)
     return res
     
 ```
 </details>
 
-## Задатак 9
-Написати функцију која враћа број појављивања цифара у ниски.
-Тражи се рекурзивно решење.
+## Задатак 7
+Написати функцију низ са парним бројем чланова групише у парове, тако да је збир минимуа тих парова максималан,
+и вратити тај максимум.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def izbroj_cifre_rekurzivno(niska):
+def maksimum_minimuma(niz):
     """
-    Написати функцију која враћа број појављивања цифара у ниски.
-    Тражи се рекурзивно решење.
+    Написати функцију низ са парним бројем чланова групише у парове, тако да је збир минимуа тих парова максималан,
+    и вратити тај максимум.
+    Пример:
+    Улаз: niz = [1,4,3,2]
+    Објашњење: Сви могући парови (занемаримо редослед бројева):
+    1. (1, 4), (2, 3) -> min(1, 4) + min(2, 3) = 1 + 2 = 3
+    2. (1, 3), (2, 4) -> min(1, 3) + min(2, 4) = 1 + 2 = 3
+    3. (1, 2), (3, 4) -> min(1, 2) + min(3, 4) = 1 + 3 = 4
+    Излаз: 4
     """
-    if niska == '':
-        return 0
+    # Сортирамо низ у растућем поретку
+    niz.sort()
+    # Иницијализујемо максимум на 0
+    max_sum = 0
+    for i in range(0, len(niz), 2):
+        # Додамо чланове на парним индексима у суму
+        max_sum += niz[i]
+        
+    return max_sum
+    
+```
+</details>
 
-    res = 1 if niska[0].isdigit() else 0
-    return res + izbroj_cifre_rekurzivno(niska[1:])
+## Задатак 8
+Написати функцију која прима низ цена бомбона, одредити колико новца би требало да потрошимо да купимо све из низа,
+ако на сваке две купљене бомбоне трећу добијамо гратис.
+Купац може изабрати коју год хоће гратис само ако цена треће није мања од миминалне цене претходне две купљене бомбоне.
 
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def bombone(niz_cena):
+    """
+    Написати функцију која прима низ цена бомбона, одредити колико новца би требало да потрошимо да купимо све из низа,
+    ако на сваке две купљене бомбоне трећу добијамо гратис.
+    Купац може изабрати коју год хоће гратис само ако цена треће није мања од миминалне цене претходне две купљене бомбоне.
+    Пример:
+    [1,2,3] -> 5
+    Купимо бомбоне од 3 и 2 динара, а бомбону од 1 динар добијамо гратис.
+    [6,5,7,9,2,2] -> 23
+    Купимо бомбоне од 9 и 7, од 6 динара добијамо гратис, купимо бомбоне од 5 и 2, и другу од 2 добијамо гратис.
+    """
+    niz_cena.sort(reverse=True)
+    cena = 0
+    for i in range(len(niz_cena)):
+        if (i+1) % 3 != 0:
+            cena += niz_cena[i]
+
+    return cena
+    
+```
+</details>
+
+## Задатак 9
+Написати функцију која за сортиран низ јединствених елемената налази индекс на који би требало ставити број уколико не постоји.
+Уколико је број у низу, вратити индекс на ком се налази тај број.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def nadji_index(niz,broj):
+    """
+    Написати функцију која за сортиран низ јединствених елемената налази индекс на који би требало ставити број уколико не постоји.
+    Уколико је број у низу, вратити индекс на ком се налази тај број.
+    Пример:
+    niz = [1,3,5,6], broj = 5 -> 2
+    niz = [1,3,5,6], broj = 2 -> 1
+    niz = [1,3,5,6], broj = 7 -> 4
+    """
+
+    for i in range(len(niz)):
+        if niz[i] >= broj:
+            return i
+    return len(niz)
+
+```
+</details>
+
+## Задатак 10
+Написати функцију која прима низ који садржи цифре броја, у подразумеваном редоследу.
+Инкрементовати број за један, и вратити низ цифара
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def plus_jedan(niz):
+    """
+    Написати функцију која прима низ који садржи цифре броја, у подразумеваном редоследу.
+    Инкрементовати број за један, и вратити низ цифара
+    Пример:
+    [1,2,3] -> [1,2,4]
+    [4,3,2,1] -> [4,3,2,2]
+    [9] -> [1,0]
+    """ 
+    niz = list(map(str,niz))
+    broj = int(''.join(niz)) + 1
+    broj = str(broj)
+    output = [cifra for cifra in broj]
+    return output
+
+    
 ```
 </details>
